# relative-meta-logic

./: .gitkeep  ARCHITECTURE.md  README.md
docs/: CONCEPTS-COMPARISION.md  DIAGNOSTICS.md  FEATURE-COMPARISION.md  KERNEL.md  METATHEOREMS.md  SOUNDNESS.md
docs/case-studies/issue-26/: README.md  gap-matrix.md  issue-plan.md  requirements.md  research.md
examples/: expected.lino  lambda-calculus.lino
experiments/: metatheorem-bad.lino  metatheorem-plus.lino  poly-apply.mjs  poly-instantiation.mjs
experiments/issue-26-filing/: README.md  file-issues.mjs  issues.json  state.json  validate.mjs
js/: README.md  package-lock.json  package.json
js/src/: check.mjs  rml-links.mjs  rml-meta.mjs  rml-repl.mjs
js/tests/: check.test.mjs  coinductive.test.mjs  counter-model.test.mjs  coverage.test.mjs  diagnostics.test.mjs  inductive.test.mjs  kernel.test.mjs  metatheorems.test.mjs  modes.test.mjs  prenex-polymorphism.test.mjs  rml-links.test.mjs  shared-examples.test.mjs  tactics.test.mjs  templates.test.mjs  termination.test.mjs  totality.test.mjs  worlds.test.mjs
rust/: Cargo.toml  README.md
rust/src/: check.rs  lib.rs  meta.rs  repl.rs
rust/tests/: check_tests.rs  coinductive_tests.rs  counter_model_tests.rs  coverage_tests.rs  diagnostics_tests.rs  inductive_tests.rs  kernel_tests.rs  metatheorems_tests.rs  modes_tests.rs  normalization_tests.rs  prenex_polymorphism_tests.rs  rml_tests.rs  shared_examples.rs  tactics_tests.rs  templates_tests.rs  termination_tests.rs  totality_tests.rs  worlds_tests.rs
scripts/: docs.test.mjs
